# SuperJunkoidRandomizer

./: .gitignore  LICENSE  README.md  Super Junkoid 1.3.ips  SuperJunkoid.csv  defaultLogic.py  fillAssumed.py  fillInterface.py  game.py  item.py  loadout.py  location.py  logicInterface.py  logic_shortcut.py  logic_updater.py  main.py  pyproject.toml  romWriter.py  solver.py
roms/: readme.txt
scr/: Main.py
scr/super_junkoid_randomizer/: defaultLogic.py  game.py  loadout.py  logicInterface.py
spoilers/: readme.txt
src/: Main.py
src/super_junkoid_randomizer/: SuperJunkoid.csv  defaultLogic.py  fillAssumed.py  fillInterface.py  game.py  item.py  loadout.py  location.py  logicInterface.py  logic_shortcut.py  logic_updater.py  romWriter.py  solver.py
