[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super_junkoid_randomizer"
version = "0.1.1"
authors = [
  { name="ninjakakes" }
]
description = "randomizer for Super Junkoid"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ninjakakes/SuperJunkoidRandomizer"
"Bug Tracker" = "https://github.com/Ninjakakes/SuperJunkoidRandomizer/issues"